stop webring widgets overflowing section
instead creates a scrollbar for just the overflowing widget

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -25,6 +25,7 @@
         font-size: 19px;
         padding: 10px;
         padding-bottom: 50px;
+        overflow: auto;
     }
 }
 
